[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies.galvyn]
git = "https://github.com/myOmikron/galvyn.git"
rev = "aa37f232a62fea4d8440e5cdeb81ab978c851d5d"
default-features = false
features = ["rorm-all-drivers", "rorm-cli", "openapi"]

[dependencies]
tokio = { version = "~1", features = ["full"] }
clap = { version = "~4", features = ["derive"] }